--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body {
-    background-color: slategray; 
-}
 html {  
   height: 100%;  
 }  
@@ -80,3 +77,6 @@ body {
   color:#AA3939;  
   height: 80px;  
 } 
+.mar{
+  margin: 15px;
+}
